# apo-tools

./: .gitignore  AGENTS.md  LICENSE  README.md
bkasm/: CMakeLists.txt  Makefile.gnu  Makefile.win  README.md  TODO.MD  TODO.md  _build.cmd  _build.sh  _clean.sh  tags
bkasm/.github/: copilot-instructions.md
bkasm/VC6/: bkasm.dsp  bkasm.opt
bkasm/VC8/: bkasm.vcproj
bkasm/devproj/: Makefile.win  bkasm.dev
bkasm/doc/: kr580vm80.md
bkasm/src/: asmast.c  asmast.h  asmvars.c  asmvars.h  bkasm.c  bkasm.h  bkints.c  bkints.h  cfg_tree.c  cfg_tree.h  cfgtree.c  cfgtree.h  codegen.c  codegen.h  errors.c  errors.h  generator.c  globals.c  globals.h  hashtable.c  hashtable.h  hashtbl.c  hashtbl.h  inbuf.c  inbuf.h  lexer.c  lexer.h  main.c  mathexpr.c  mathexpr.h  nodes.c  nodes.h  opcodes.h  parser.c  parser.h  symbols.c  symbols.h  test.asm  tests.py
bkasm/src/tests/: errors.txt  test.asm  test0001.asm
bkasm/tests/: errors.txt  test.asm  test_opcodes.asm  test_opcodes.py  test_opcodes_errors.py  test_opcodes_errors.txt  tests.py
compiler/: CMakeLists.txt
compiler/devproj/: Makefile.win  bkasm.dev  bkasm.layout
compiler/src/: errors.c  errors.h  globals.c  globals.h  inbuf.c  inbuf.h  lexer.c  lexer.h  main.c  nodes.c  nodes.h  parser.c  parser.h  program.c  program.h  symbols.c  symbols.h  test.asm
rkaexchange/: AGENTS.md  CMakeLists.txt  README.md  rkaexchange_bsd
rkaexchange/VC6/: rkaexchange.dsp
rkaexchange/VC8/: rkaexchange.vcproj
rkaexchange/devproj/: Makefile.win  devproj.dev  devproj.layout
rkaexchange/doc/: RKA_FORMAT_SPEC.md
rkaexchange/examples/: bin_program.rka  named_basic.rka
rkaexchange/src/: edb.c  edb.h  errors.c  errors.h  globals.c  globals.h  inbuf.c  inbuf.h  main.c  test.asm  test.rka
